# holeyvec

./: Cargo.toml  LICENSE  README.md
src/: holeyvec.rs  lib.rs
